project/environment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-app-service
spec:
  selector:
    app: mi-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
